--- a/css/Assignment6.css
+++ b/css/Assignment6.css
@@ -50,6 +50,10 @@ background-repeat: no-repeat;
     background-image: url('../Images/grass.jpeg');
     background-repeat: no-repeat;
 }
+.stone{
+    background-image: url('../Images/stone.PNG');
+
+}
 .tree{
     background-image: url('../Images/Tree.png');
 }
