--- a/css/Assignment6.css
+++ b/css/Assignment6.css
@@ -25,7 +25,7 @@ button:not(#new){
 #new{
     width: 100%;
     height: 8%;
-    font-family: 'pixel';
+    font-family: 'Press Start 2P', cursive;
     font-size: 3vh;
     border: 1px solid black;  
     overflow: hidden;
@@ -85,4 +85,14 @@ background-repeat: no-repeat;
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.inventory{
+    height:40px;
+    width:40px;
+    background-size: contain;
+    color: white;
+    font-size: 30px;
+    font-family: 'Press Start 2P', cursive;
+
 }
