--- a/css/Assignment6.css
+++ b/css/Assignment6.css
@@ -48,7 +48,8 @@ background-repeat: no-repeat;
 .elt{
     height:40px;
     width:40px;
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 .elt:hover{
