--- a/css/Assignment6.css
+++ b/css/Assignment6.css
@@ -1,12 +1,40 @@
 body{
     height: 100vh;
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+}
+.accueil{
+    background-image: url('../Images/fond.jpg');
+    height: 100vh;
+}
+.logo{
+    margin-left: 470px;
+    width: 600px;
+}
+.modal-content{
+    width: 500px;
+    margin:auto;
+}
+.modal-body{
+    background-color: rgb(163, 118, 87);
+}
+.modal-tutorial{
+    display:none;
+    background-color: rgb(163, 118, 87);
+    height: 2px;
+
+}
+#btn_endtutorial{
+    margin-left: 170px;
+
+}
+.container-fluid{
+    display:none;
 }
 .col-10{
-position: relative;
-width: 80%;
-}
+    position: relative;
+    }
 .col-2{
-    width:20%;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
@@ -14,40 +42,50 @@ width: 80%;
     background-color: grey;
     overflow: hidden;
 }
-button:not(#new){
+button:not(#new,.btn){
     border: 1px solid black;   
-    height: 7vh;
-    width: 7vh;
-    margin-left: 10%;
-    
-
+    height:60px;
+    width:60px;
+    margin-left: 10%;     
+    }
+.btn{
+    width: 150px;
+    border: 1px solid black;
+    margin: 40px;
+    background-color: rgb(186, 178, 175)
 }
+
 #new{
-    width: 100%;
-    height: 8%;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 3vh;
+    width: 120px;
+    height: 80px;
+    font-size: 25px;
     border: 1px solid black;  
     overflow: hidden;
 }
 #axe{
-background-image: url('../Images/Axe.png');
-background-size:contain; 
-background-repeat: no-repeat;
+    height:60px;
+    width:60px;
+    background-image: url('../Images/Axe.png');
+    background-size:contain; 
+    background-repeat: no-repeat;
 }
 #pickaxe{
+    height:60px;
+    width:60px;
     background-image: url('../Images/pickaxe.jpg');
     background-size:contain; 
     background-repeat: no-repeat;
 }
 #shovel{
+    height:60px;
+    width:60px;
     background-image: url('../Images/shovel.jpeg'); 
     background-size:contain; 
     background-repeat: no-repeat;
 }
 .elt{
-    height:40px;
-    width:40px;
+    height: 42px;
+    width: 42px;
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -89,11 +127,10 @@ background-repeat: no-repeat;
 }
 
 .inventory{
-    height:40px;
-    width:40px;
+    height:60px;
+    width:60px;
     background-size: contain;
     color: white;
-    font-size: 20px;
     font-family: 'Press Start 2P', cursive;
 
 }
