--- a/css/Assignment6.css
+++ b/css/Assignment6.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Press Start 2P', cursive;
     color: black;
+    overflow:hidden;
 }
 .accueil{
     background-image: url('../Images/fond.jpg');
